# Zhihu_Cmake2VsIDE_Qt

./: README.md  build_default.bat  delete_default.bat
src/: CMakeLists.txt  main.cpp
src/CMakeHelp/: PathHelp.cmake  Qt5Help.cmake
src/Include/QtHelp/: WJAPI_QtDebug.h  WJAPI_QtUi.h
src/Src/QtHelp/: WJAPI_QtUi.cpp
src/Ui/Include/: QDx12Wid.h  QtGuiZero00.h
src/Ui/Src/: QDx12Wid.cpp  QtGuiZero00.cpp
src/Ui/UiFile/: QDx12Wid.ui  QtGuiZero00.qrc  QtGuiZero00.ui
